# embed-homework

./: .gitignore  要求.md
.claude/: settings.local.json
bearpi-hm_micro_small/: .gitignore  CLAUDE.md  README.md
bearpi-hm_micro_small/applications/BearPi/BearPi-HM_Micro/samples/Micro_E53_SmartLamp/: BUILD.gn
bearpi-hm_micro_small/applications/BearPi/BearPi-HM_Micro/samples/Micro_E53_SmartLamp/entry/: build.gradle
bearpi-hm_micro_small/applications/BearPi/BearPi-HM_Micro/samples/Micro_E53_SmartLamp/entry/src/main/: config.json
bearpi-hm_micro_small/applications/BearPi/BearPi-HM_Micro/samples/Micro_E53_SmartLamp/entry/src/main/js/default/pages/hongwai/: hongwai.css  hongwai.hml  hongwai.js
bearpi-hm_micro_small/applications/BearPi/BearPi-HM_Micro/samples/Micro_E53_SmartLamp/entry/src/main/js/default/pages/index/: index.css  index.hml  index.js
bearpi-hm_micro_small/applications/BearPi/BearPi-HM_Micro/samples/Micro_E53_SmartLamp/entry/src/main/js/default/pages/jinggai/: jinggai.css  jinggai.hml  jinggai.js
bearpi-hm_micro_small/applications/BearPi/BearPi-HM_Micro/samples/Micro_E53_SmartLamp/entry/src/main/js/default/pages/ludeng/: ludeng.css  ludeng.hml  ludeng.js
bearpi-hm_micro_small/applications/BearPi/BearPi-HM_Micro/samples/Micro_E53_SmartLamp/entry/src/main/js/default/pages/nongye/: nongye.css  nongye.hml  nongye.js
bearpi-hm_micro_small/applications/BearPi/BearPi-HM_Micro/samples/Micro_E53_SmartLamp/entry/src/main/js/default/pages/yangan/: yangan.css  yangan.hml  yangan.js
bearpi-hm_micro_small/applications/BearPi/BearPi-HM_Micro/samples/huawei_mqtt_demo/: BUILD.gn  README.md  huawei_mqtt_demo.c
bearpi-hm_micro_small/device/st/: README.md  README_zh.md
bearpi-hm_micro_small/device/st/drivers/e53_driver/: BUILD.gn
bearpi-hm_micro_small/device/st/drivers/e53_driver/E53_Common/: BUILD.gn
bearpi-hm_micro_small/device/st/drivers/e53_driver/E53_Common/inc/: E53_Common.h
bearpi-hm_micro_small/device/st/drivers/e53_driver/E53_Common/src/: BM_E53_ADC_DAC.c  BM_E53_GPIO.c  BM_E53_IIC.c  BM_E53_PWM.c
bearpi-hm_micro_small/device/st/drivers/e53_driver/E53_IA1/: E53_IA1_hdf.c
bearpi-hm_micro_small/device/st/drivers/e53_driver/E53_IA1/inc/: E53_IA1.h
bearpi-hm_micro_small/device/st/drivers/e53_driver/E53_IA1/src/: E53_IA1.c
bearpi-hm_micro_small/device/st/drivers/e53_driver/E53_IS1/: E53_IS1_hdf.c
bearpi-hm_micro_small/device/st/drivers/e53_driver/E53_IS1/inc/: E53_IS1.h
bearpi-hm_micro_small/device/st/drivers/e53_driver/E53_IS1/src/: E53_IS1.c
bearpi-hm_micro_small/device/st/drivers/e53_driver/E53_SC1/: E53_SC1_hdf.c
bearpi-hm_micro_small/device/st/drivers/e53_driver/E53_SC1/inc/: E53_SC1.h
bearpi-hm_micro_small/device/st/drivers/e53_driver/E53_SC1/src/: E53_SC1.c
bearpi-hm_micro_small/device/st/drivers/e53_driver/E53_SC2/: E53_SC2_hdf.c
bearpi-hm_micro_small/device/st/drivers/e53_driver/E53_SC2/inc/: E53_SC2.h
bearpi-hm_micro_small/device/st/drivers/e53_driver/E53_SC2/src/: E53_SC2.c
bearpi-hm_micro_small/device/st/drivers/e53_driver/E53_SF1/: E53_SF1_hdf.c
bearpi-hm_micro_small/device/st/drivers/e53_driver/E53_SF1/inc/: E53_SF1.h
bearpi-hm_micro_small/device/st/drivers/e53_driver/E53_SF1/src/: E53_SF1.c
过程/: thumbs.db  智慧台灯升级方案-模块任务拆解.md  智慧台灯开发全过程记录.md  智慧台灯开发提交与文件分析.md  智慧台灯项目功能模块总览.md  案例1-E53_SC1智慧路灯分析报告.md  模块1-硬件驱动改造完成记录.md  模块3-HAP应用开发完成记录.md
(+102 files in other folders)
