# Copyright (c) 2021 Nanjing Xiaoxiongpai Intelligent Technology Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


import("//drivers/adapter/khdf/liteos/hdf.gni")

hdf_driver("hdf_E53_adapter") {
    sources = [
        "E53_IA1/src/E53_IA1.c",
        "E53_SC1/src/E53_SC1.c",
        "E53_SC2/src/E53_SC2.c",
        "E53_SF1/src/E53_SF1.c",
        "E53_IS1/src/E53_IS1.c", 

        "E53_IA1/E53_IA1_hdf.c",
        "E53_SC1/E53_SC1_hdf.c",
        "E53_SC2/E53_SC2_hdf.c",
        "E53_SF1/E53_SF1_hdf.c",
        "E53_IS1/E53_IS1_hdf.c",
    ]

    include_dirs = [
        "adapter/inc/",
        "E53_Common/inc/",
        "E53_IA1/inc/",
        "E53_SC1/inc",
        "E53_SC2/inc",
        "E53_SF1/inc",
        "E53_IS1/inc",
    ]

    deps = [
        "E53_Common:E53_Common",

    ]
}

